@@ -503,9 +503,12 @@ GridBool gridNewGeometryEdgeSiteAllowedAt(Grid *grid,
   int faceId0, faceId1;
   int nodes0[3], nodes1[3];
   double uv0[3][2], uv1[3][2];
-  double new_uv0[2], new_uv1[2];
+  double interpolated_uv0[2], interpolated_uv1[2];
+  double projected_uv0[2], projected_uv1[2];
   double xyz0[3], xyz1[3];
   double uv[3][2];
+  
+  double du, dv, distance_squared;
 
   int i;
 
@@ -542,40 +545,62 @@ GridBool gridNewGeometryEdgeSiteAllowedAt(Grid *grid,
   }
 
   /* and obtain a linear guess for new UV location uv = (1-r)*uv + r*uv */
-  new_uv0[0] = new_uv0[1] = 0.0;
+  interpolated_uv0[0] = interpolated_uv0[1] = 0.0;
   for ( i=0 ; i < 3 ; i++ ) {
     if ( nodes0[i] == node0 ) {
-      new_uv0[0] += (1-ratio)*uv0[i][0];
-      new_uv0[1] += (1-ratio)*uv0[i][1];
+      interpolated_uv0[0] += (1-ratio)*uv0[i][0];
+      interpolated_uv0[1] += (1-ratio)*uv0[i][1];
     }
     if ( nodes0[i] == node1 ) {
-      new_uv0[0] += ratio*uv0[i][0];
-      new_uv0[1] += ratio*uv0[i][1];
+      interpolated_uv0[0] += ratio*uv0[i][0];
+      interpolated_uv0[1] += ratio*uv0[i][1];
     }
   }
-  new_uv1[0] = new_uv1[1] = 0.0;
+  interpolated_uv1[0] = interpolated_uv1[1] = 0.0;
   for ( i=0 ; i < 3 ; i++ ) {
     if ( nodes1[i] == node0 ) {
-      new_uv1[0] += (1-ratio)*uv1[i][0];
-      new_uv1[1] += (1-ratio)*uv1[i][1];
+      interpolated_uv1[0] += (1-ratio)*uv1[i][0];
+      interpolated_uv1[1] += (1-ratio)*uv1[i][1];
     }
     if ( nodes1[i] == node1 ) {
-      new_uv1[0] += ratio*uv1[i][0];
-      new_uv1[1] += ratio*uv1[i][1];
+      interpolated_uv1[0] += ratio*uv1[i][0];
+      interpolated_uv1[1] += ratio*uv1[i][1];
     }
   }
 
   /* make sure that the geometry faces can be projected to */
-  if ( grid != gridProjectToFace( grid, faceId0, xyz, new_uv0, xyz0 ) ) 
+  projected_uv0[0] = interpolated_uv0[0];
+  projected_uv0[1] = interpolated_uv0[1];
+  if ( grid != gridProjectToFace( grid, faceId0, xyz, projected_uv0, xyz0 ) ) 
     return FALSE;
-  if ( grid != gridProjectToFace( grid, faceId1, xyz, new_uv1, xyz1 ) ) 
+  projected_uv1[0] = interpolated_uv1[0];
+  projected_uv1[1] = interpolated_uv1[1];
+  if ( grid != gridProjectToFace( grid, faceId1, xyz, projected_uv1, xyz1 ) ) 
     return FALSE;
 
-  /* make sure that projected uv values produce positve uv area triangles */
+  /* if the t value is near an edge segment endpoint make sure the uv
+     is close to the existing trangle uv value */
+  if ( ratio < 1.0e-7 ){
+    du = projected_uv0[0]-interpolated_uv0[0];
+    dv = projected_uv0[1]-interpolated_uv0[1];
+    distance_squared = du*du + dv*dv;
+    if ( distance_squared > 1.0e-12 ) return FALSE;
+    return TRUE;
+  }
+  if ( ratio > (1.0-1.0e-7) ) {
+    du = projected_uv1[0]-interpolated_uv1[0];
+    dv = projected_uv1[1]-interpolated_uv1[1];
+    distance_squared = du*du + dv*dv;
+    if ( distance_squared > 1.0e-12 ) return FALSE;
+    return TRUE;
+  }
+
+  /* make sure that projected uv values produce positve uv area triangles 
+     for the middle of the edges */
   for ( i=0 ; i < 3 ; i++ ) {
     if ( nodes0[i] == node0 ) {
-      uv[i][0] = new_uv0[0];
-      uv[i][1] = new_uv0[1];
+      uv[i][0] = projected_uv0[0];
+      uv[i][1] = projected_uv0[1];
     } else {
       uv[i][0] = uv0[i][0];
       uv[i][1] = uv0[i][1];
@@ -586,8 +611,8 @@ GridBool gridNewGeometryEdgeSiteAllowedAt(Grid *grid,
 
   for ( i=0 ; i < 3 ; i++ ) {
     if ( nodes0[i] == node1 ) {
-      uv[i][0] = new_uv0[0];
-      uv[i][1] = new_uv0[1];
+      uv[i][0] = projected_uv0[0];
+      uv[i][1] = projected_uv0[1];
     } else {
       uv[i][0] = uv0[i][0];
       uv[i][1] = uv0[i][1];
@@ -598,8 +623,8 @@ GridBool gridNewGeometryEdgeSiteAllowedAt(Grid *grid,
 
   for ( i=0 ; i < 3 ; i++ ) {
     if ( nodes1[i] == node0 ) {
-      uv[i][0] = new_uv1[0];
-      uv[i][1] = new_uv1[1];
+      uv[i][0] = projected_uv1[0];
+      uv[i][1] = projected_uv1[1];
     } else {
       uv[i][0] = uv1[i][0];
       uv[i][1] = uv1[i][1];
@@ -610,8 +635,8 @@ GridBool gridNewGeometryEdgeSiteAllowedAt(Grid *grid,
 
   for ( i=0 ; i < 3 ; i++ ) {
     if ( nodes1[i] == node1 ) {
-      uv[i][0] = new_uv1[0];
-      uv[i][1] = new_uv1[1];
+      uv[i][0] = projected_uv1[0];
+      uv[i][1] = projected_uv1[1];
     } else {
       uv[i][0] = uv1[i][0];
       uv[i][1] = uv1[i][1];
